# LiveDemo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  gao.apk  gao1.apk
app/src/androidTest/java/com/dobi/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dn_live.c  native-lib.cpp  queue.c
app/src/main/java/com/dobi/live/: DragSurfaceView.java  Main1Activity.java  Main22Activity.java  MainActivity.java  Push0919Activity.java  PushActivity.java  Setup1Activity.java  Setup20180912Activity.java  SetupActivity.java  ThreePull2Activity.java  ThreePullActivity.java
app/src/main/java/com/dobi/live/global/: GlobalContants.java
app/src/main/java/com/dobi/live/jni/: PushNative.java
app/src/main/java/com/dobi/live/listener/: LiveStateChangeListener.java
app/src/main/java/com/dobi/live/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/dobi/live/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/java/com/dobi/live/utils/: DensityUtils.java  ThreadUtils.java
app/src/main/java/com/dobi/live/video/: EmptyControlVideo.java
app/src/main/java/com/dobi/live/view/: MyIjkVideoView.java  OnDoubleClickListener.java
app/src/main/res/layout/: activity_main.xml  activity_main_2.xml  activity_main_22.xml  activity_push.xml  activity_push2.xml  activity_setup.xml  activity_setup1.xml  activity_setup20180912.xml  activity_three_pull.xml  activity_three_pull2.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/dobi/live/: ExampleUnitTest.java
(+14 files in other folders)
